# Integuru

./: Makefile  README.md  example_usage.py  pyproject.toml
.specstory/history/: updating-readme-md-for-poetry-instructions.md
